Доработал верстку страницы сотрудников.

--- a/public/microtest.html
+++ b/public/microtest.html
@@ -11,13 +11,8 @@
     </script>
 </head>
 <body>
-<input type="text" id="url" name="url" value="//dmitri.vput.ru"/>
-<button class="start">Start</button>
 
-<div class="output"></div>
-
-<iframe id="iframe" src="//dmitri.vput.ru" frameborder="0" style="width: 600px; height: 400px;">
-</iframe>
+<iframe src="//vput.ru/widgets/realties/?lang=ru&template=widget-white-offers-790x290&partnerId=1509" width="790" height="300" scrolling="no" frameborder="0"></iframe>
 
 </body>
 </html>
