Доработал модуль галереи. Реализовал добавление, редактирование, удаление альбомов. Релизовал загрузку фото в альбом.

--- a/public/microtest.html
+++ b/public/microtest.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<iframe src="//vput.ru/widgets/realties/?lang=ru&template=widget-white-offers-790x290&partnerId=1509" width="790" height="300" scrolling="no" frameborder="0"></iframe>
+<iframe src="//dmitri.vput.ru/widgets/realties/?lang=ru&template=widget-white-offers-790x290&partnerId=570" width="790" height="300" scrolling="no" frameborder="0"></iframe>
 
 </body>
 </html>
